Shopping cart website w/ pop to confirm

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ Variables
 */
 
 :root {
-  --clr-primary: #645cff;
+  --clr-primary: #645cffe0;
   --clr-primary-dark: #282566;
   --clr-primary-light: #a29dff;
   --clr-grey-1: #102a42;
